--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>EduWave - Online Courses</title>
-  <!-- Icons -->
   <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
-  <!-- Styles -->
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -31,8 +29,7 @@
           <a href="#features" class="btn ghost"><i class='bx bx-play'></i> See Features</a>
         </div>
       </div>
-      <div class="art" aria-hidden="true">
-        <!-- Simple decorative illustration (no external images) -->
+      <div class="art" aria-hidden="true">>
         <svg viewBox="0 0 200 140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Abstract education art">
           <defs>
             <linearGradient id="g1" x1="0" x2="1" y1="0" y2="1">
