--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
   <header class="site-header">
     <nav class="nav container">
       <a class="brand" href="#"><i class='bx bxs-graduation'></i><span>EduWave</span></a>
+    
+      <input type="checkbox" id="nav-toggle" class="nav-toggle" aria-label="Toggle menu">
+      <label for="nav-toggle" class="hamburger"><i class='bx bx-menu'></i></label>
+    
       <ul class="menu">
         <li><a href="#features">Features</a></li>
         <li><a href="#courses">Courses</a></li>
